Created CategoryResource and changed record Peli by FilmDTO