@@ -2,10 +2,7 @@ package com.example.application.resources;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -15,48 +12,39 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import com.example.domains.contracts.services.FilmService;
-import com.example.domains.entities.Film;
-import com.example.domains.entities.models.ActorDTO;
+import com.example.domains.contracts.services.CategoryService;
+import com.example.domains.entities.Category;
 import com.example.domains.entities.models.FilmDTO;
 import com.example.exceptions.BadRequestException;
 import com.example.exceptions.DuplicateKeyException;
 import com.example.exceptions.InvalidDataException;
 import com.example.exceptions.NotFoundException;
 
+import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 
 @RestController
-@RequestMapping("/api/peliculas/v1")
-public class FilmResource {
-	private FilmService srv;
+@RequestMapping("/api/categorias/v1")
+public class CategoryResource {
+	private CategoryService srv;
 
-	
-	public FilmResource(FilmService srv) {
+	public CategoryResource(CategoryService srv) {
 		this.srv = srv;
 	}
 
 	@GetMapping
-	public List getAll(@RequestParam(required = false, defaultValue = "long") String modo) {
-		if (modo.equals("short"))
-			return srv.getAll().stream().map(o -> new FilmDTO(o.getFilmId(), o.getTitle()))
-					.toList();
+	public List<Category> getAll() {
 		return srv.getAll();
 
 	}
-	
-	@GetMapping(params = "page")
-	public Page<Film> getAll(Pageable page) {
-		return srv.getAll(page);
-	}
+
 
 	@GetMapping(path = "/{id}")
-	public Film getOne(@PathVariable int id) throws NotFoundException { 												
+	public Category getOne(@PathVariable int id) throws NotFoundException { 
 		var item = srv.getOne(id);
 		if (item.isEmpty())
 			throw new NotFoundException();
@@ -64,32 +52,30 @@ public class FilmResource {
 
 	}
 
-	@GetMapping(path = "/{id}/actores")
-	public List<ActorDTO> getActores(@PathVariable int id) throws NotFoundException { 												
+	@GetMapping(path = "/{id}/pelis")
+	@Transactional
+	public List<FilmDTO> getPelis(@PathVariable int id) throws NotFoundException {
 		var item = srv.getOne(id);
 		if (item.isEmpty())
 			throw new NotFoundException();
-
-		 return item.get().getActors().stream()
-		            .map(ActorDTO::from)
-		            .collect(Collectors.toList());
+		return item.get().getFilmCategories().stream().map(o -> new FilmDTO(o.getFilm().getFilmId(), o.getFilm().getTitle()))
+				.toList();
 	}
-	
 
 	@PostMapping
-	public ResponseEntity<Object> create(@Valid @RequestBody Film item)
-			throws DuplicateKeyException, InvalidDataException {
+	public ResponseEntity<Object> create(@Valid @RequestBody Category item)
+			throws BadRequestException, DuplicateKeyException, InvalidDataException {
 		var newItem = srv.add(item);
 		URI location = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}")
-				.buildAndExpand(newItem.getFilmId()).toUri();
+				.buildAndExpand(newItem.getCategoryId()).toUri();
 		return ResponseEntity.created(location).build();
 	}
 
 	@PutMapping(path = "/{id}")
 	@ResponseStatus(HttpStatus.NO_CONTENT) // 204
-	public void update(@PathVariable int id, @Valid @RequestBody Film item)
+	public void update(@PathVariable int id, @Valid @RequestBody Category item)
 			throws BadRequestException, NotFoundException, InvalidDataException {
-		if (id != item.getFilmId())
+		if (id != item.getCategoryId())
 			throw new BadRequestException("No coinciden los ids");
 		srv.modify(item);
 	}
